# mipt_regular-expressions-automata

./: LICENSE  README.md
source/: CMakeLists.txt  main.cpp
source/CAutomata/: cautomata.cpp  cautomata.h
source/CAutomata/Tests/: CAutomataTests.cpp  CAutomataTests.h
source/CSolver/: csolver.cpp  csolver.h
source/CSolver/CRotation/: crotation.cpp  crotation.h
